--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'Ritu Raj Pratap Singh'
+          git config --global user.email 'theriturajps@gmail.com'
           git add README.md
           git commit -m "Update uptime stats [skip ci]" || echo "No changes to commit"
           git push
