--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -1,5 +1,8 @@
 name: Keep Servers Alive
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "*/5 * * * *"  # Runs every 5 minutes
@@ -25,8 +28,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name 'Ritu Raj Pratap Singh'
-          git config --global user.email 'theriturajps@gmail.com'
+          git config --global user.name "Ritu Raj Pratap Singh"
+          git config --global user.email "theriturajps@gmail.com"
           git add README.md
           git commit -m "Update uptime stats [skip ci]" || echo "No changes to commit"
           git push
